Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30740

Cursor with TextInput with QML/inputMask does not behave well

    XMLWordPrintable

Details

    • 5f7ba49e2501286670e19ee8ba7d48b169fa3330

    Description

      Cursor gets stuck in following qml code
      TextInput {
      inputMask: "#0:00;*"
      }

      In the attached example simply set the mouse cursor to the beginning of a TextInput and then use the cursor keys on the keyboard to navigate to the very right.

      This works fine with the top one, but the cursor gets stuck in the lower one.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frederik Frederik Gladhorn
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes